--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-    <title>Endymion1977 Example-SMART-App</title>
+    <title>Endymion1977 Example-SMART-App take 2</title>
 
     <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
     <!--
